--- a/package.json
+++ b/package.json
@@ -1,10 +1,25 @@
 {
-    "scripts":
-    {
-        "dev": "yarn run webpack-dev-server --env.mode development --open --hot",
-        "prod": "yarn run webpack --env.mode production",
-        "prod:analyze": "yarn prod --env.presets analyze",
-        "test": "jest --coverage",
-        "test:watch": "jest --watch"
-    }
+  "scripts": {
+    "dev": "yarn run webpack-dev-server --env.mode development --open --hot",
+    "prod": "yarn run webpack --env.mode production",
+    "prod:analyze": "yarn prod --env.presets analyze",
+    "prod:compress": "yarn prod --env.presets compress",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
+    "format:check": "prettier --list-different \"src/**/*.{js,jsx}\"",
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet --fix"
+  },
+  "license": "GPL-3.0",
+  "browserslist": [
+    "last 2 Chrome versions",
+    "last 2 ChromeAndroid versions",
+    "last 2 Firefox versions",
+    "last 2 FirefoxAndroid versions",
+    "last 2 Safari versions",
+    "last 2 iOS versions",
+    "last 2 Edge versions",
+    "last 2 Opera versions",
+    "last 2 OperaMobile versions"
+  ]
 }
