--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "dev": "yarn run webpack-dev-server --env.mode development --open --hot",
-    "prod": "yarn run webpack --env.mode production",
+    "dev": "yarn run webpack-dev-server --config-register @babel/register --env.mode development --open --hot",
+    "prod": "yarn run webpack --config-register @babel/register --env.mode production",
     "prod:analyze": "yarn prod --env.presets analyze",
     "prod:compress": "yarn prod --env.presets compress",
     "test": "jest --coverage",
